# hydra-tools

./: .gitignore  .replit  Makefile  README.md  cabal.project  cabal.project.local  flake.nix  mock-github-data.json  replit.nix  result
disk-store/: disk-store.cabal
disk-store/src/: DiskStore.hs
disk-store/test/: test.hs
disk-store/test/Test/: DiskStore.hs
docs/: github-integration.md  local-testing.md
ds-queue/: ds-queue.cabal
ds-queue/src/: DsQueue.hs
ds-queue/test/: test.hs
ds-queue/test/Test/: DsQueue.hs
flake/: formatter.nix  nixosModules.nix  packages.nix  tests.nix
flake/test/: check_run.payload.txt  check_suite.payload.txt  default.nix  pr_opened.payload.txt  pr_opened_unknown.payload.txt  push.payload.txt  setup.nix
github-hydra-bridge/: README.md  github-hydra-bridge.cabal
github-hydra-bridge/app/: Main.hs
github-hydra-bridge/src/: Hydra.hs  Lib.hs
hydra-attic-bridge/: CHANGELOG.md  LICENSE  hydra-attic-bridge.cabal  setup.sql
hydra-attic-bridge/app/: Main.hs
hydra-crystal-notify/: default.nix  shell.nix
hydra-crystal-notify/src/: config-parser.cr  hydra-notify-class.cr
hydra-github-bridge/: hydra-github-bridge.cabal
hydra-github-bridge/app/: Main.hs
hydra-github-bridge/src/: Lib.hs
hydra-github-bridge/src/Lib/: Bridge.hs  GitHub.hs  Hydra.hs  SSE.hs
hydra-github-bridge/src/Lib/Bridge/: GitHubToHydra.hs  HydraToGitHub.hs  Sync.hs
hydra-github-bridge/src/Lib/Data/: Duration.hs  List.hs  Text.hs
hydra-github-bridge/src/Lib/GitHub/: Client.hs  WebHookServer.hs
hydra-github-bridge/src/Lib/Hydra/: Client.hs  DB.hs
hydra-github-bridge/src/Lib/SSE/: Server.hs  StatusCache.hs
hydra-lib/: hydra-lib.cabal
hydra-lib/src/HydraLib/Data/: Duration.hs  List.hs  Text.hs
hydra-lib/src/HydraLib/GitHub/: Client.hs  Types.hs
hydra-lib/src/HydraLib/Hydra/: Client.hs  Types.hs
hydra-lib/src/HydraLib/SSE/: StatusCache.hs
hydra-web/: hydra-web.cabal
hydra-web/app/: Main.hs
hydra-web/src/HydraWeb/: API.hs  Config.hs  Docs.hs  Server.hs  Types.hs  Visibility.hs
hydra-web/src/HydraWeb/Auth/: Encrypt.hs  GitHub.hs  Middleware.hs  Session.hs
hydra-web/src/HydraWeb/DB/: Actions.hs  Auth.hs  Bridges.hs  Builds.hs  Evals.hs  Installations.hs  Migrate.hs  OrgMap.hs  Pool.hs  Projects.hs  Queue.hs  RepoVisibility.hs  Search.hs  Util.hs
hydra-web/src/HydraWeb/GitHub/: RepoCheck.hs
hydra-web/src/HydraWeb/Handlers/: API.hs  Actions.hs  Admin.hs  Auth.hs  Bridges.hs  Build.hs  BuildLog.hs  Download.hs  Eval.hs  Job.hs  Jobset.hs  OrgRepo.hs  Overview.hs  Profile.hs  Project.hs  Proxy.hs  Queue.hs  Redirect.hs  RunningEvals.hs  Search.hs
hydra-web/src/HydraWeb/Models/: Bridge.hs  Build.hs  Eval.hs  Project.hs  Queue.hs  User.hs
hydra-web/src/HydraWeb/SSE/: Fragments.hs  Hub.hs  Listener.hs  Stream.hs
hydra-web/src/HydraWeb/View/: BuildDiff.hs  Components.hs  HTMX.hs  Layout.hs  Pager.hs  Render.hs
hydra-web/src/HydraWeb/View/Pages/: Admin.hs  Bridges.hs  Build.hs  Eval.hs  Jobset.hs  Login.hs  Overview.hs  Profile.hs  Project.hs  Queue.hs  RunningEvals.hs  Search.hs
hydra-web/static/: sse.js  style.css  tabs.js
hydra-web/test/: Main.hs
hydra-web/test/HydraWeb/: ConfigSpec.hs  VisibilitySpec.hs
hydra-web/test/HydraWeb/Auth/: EncryptSpec.hs  MiddlewareSpec.hs
hydra-web/test/HydraWeb/DB/: OrgMapSpec.hs  SearchSpec.hs
hydra-web/test/HydraWeb/View/: ComponentsSpec.hs
