cabal-version:      3.0
name:               hydra-github-bridge
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Moritz Angermann
maintainer:         moritz.angermann@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall -Werror

executable hydra-github-bridge
    import:           warnings
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts
    hs-source-dirs:   app
    main-is:          Main.hs
    -- other-modules:
    build-depends:    base >=4.16 && < 5
                    , aeson
                    , aeson-casing
                    , human-readable-duration
                    , postgresql-simple
                    , bytestring
                    , disk-store
                    , ds-queue
                    , http-client
                    , http-client-tls
                    , regex-tdfa
                    , servant
                    , servant-client
                    , stm
                    , text
