cabal-version:      3.0
name:               hydra-github-bridge
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Moritz Angermann
maintainer:         moritz.angermann@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
    ghc-options:      -Wall -Werror
    default-language: Haskell2010
    build-depends:    base >=4.16 && < 5
                    , aeson
                    , aeson-casing
                    , async
                    , human-readable-duration
                    , postgresql-simple
                    , bytestring
                    , bz2
                    , string-conversions
                    , disk-store
                    , ds-queue
                    , github-rest
                    , regex-tdfa
                    , text
                    , time
                    , filepath

library
    import: common
    hs-source-dirs:   src
    exposed-modules:    Lib
                      , Lib.Hydra
                      , Lib.GitHub
                      , Lib.Data.Duration
                      , Lib.Data.List
                      , Lib.Data.Text

executable hydra-github-bridge
    import:           common
    ghc-options:      -threaded -rtsopts
    hs-source-dirs:   app, src
    other-modules:    Lib, Lib.GitHub, Lib.Hydra, Lib.Data.Duration, Lib.Data.List, Lib.Data.Text
    main-is:          Main.hs
