cabal-version:      3.0
name:               hydra-github-bridge
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Moritz Angermann
maintainer:         moritz.angermann@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
    ghc-options:      -Wall -Werror
    default-language: Haskell2010
    build-depends:    base >=4.16 && < 5
                    , aeson
                    , aeson-schemas
                    , aeson-casing
                    , async
                    , containers
                    , human-readable-duration
                    , postgresql-simple
                    , bytestring
                    , crypton
                    , crypton-x509
                    , crypton-x509-store
                    , bz2
                    , string-conversions
                    , github-webhooks
                    , github-rest >= 1.2
                    , regex-tdfa
                    , mtl
                    , text
                    , time
                    , filepath
                    , http-client
                    , http-client-tls
                    , http-types
                    , network-uri
                    , servant
                    , servant-server
                    , servant-client
                    , servant-github-webhook
                    , stm
                    , wai
                    , warp

library
    import: common
    hs-source-dirs:   src
    exposed-modules:    Lib
                      , Lib.Bridge
                      , Lib.Bridge.GitHubToHydra
                      , Lib.Bridge.HydraToGitHub
                      , Lib.Hydra
                      , Lib.Hydra.Client
                      , Lib.Hydra.DB
                      , Lib.GitHub
                      , Lib.GitHub.Client
                      , Lib.GitHub.WebHookServer
                      , Lib.SSE
                      , Lib.SSE.StatusCache
                      , Lib.SSE.Server
                      , Lib.Data.Duration
                      , Lib.Data.List
                      , Lib.Data.Text

executable hydra-github-bridge
    import:           common
    ghc-options:      -threaded -rtsopts
    hs-source-dirs:   app, src
    other-modules:      Lib
                      , Lib.Bridge
                      , Lib.Bridge.GitHubToHydra
                      , Lib.Bridge.HydraToGitHub
                      , Lib.GitHub
                      , Lib.GitHub.Client
                      , Lib.GitHub.WebHookServer
                      , Lib.Hydra
                      , Lib.Hydra.Client
                      , Lib.Hydra.DB
                      , Lib.SSE
                      , Lib.SSE.StatusCache
                      , Lib.SSE.Server
                      , Lib.Data.Duration
                      , Lib.Data.List
                      , Lib.Data.Text
    main-is:          Main.hs
