-- Copyright 2026 Moritz Angermann <moritz@zw3rk.com>, zw3rk pte. ltd.
-- SPDX-License-Identifier: Apache-2.0
cabal-version:      3.0
name:               hydra-web
version:            0.1.0.0
synopsis:           Haskell frontend for Hydra CI (replaces Go hydra-web)
license:            Apache-2.0
author:             Moritz Angermann
maintainer:         moritz@zw3rk.com
category:           Web
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
    build-depends:
        base >= 4.16 && < 5
      , hydra-lib
      , aeson
      , bytestring
      , containers
      , http-types
      , lucid
      , postgresql-simple
      , resource-pool
      , servant
      , servant-lucid
      , servant-server
      , stm
      , text
      , time
      , wai
      , wai-extra
      , wai-app-static
      , warp

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        HydraWeb.Config
      , HydraWeb.Types
      , HydraWeb.API
      , HydraWeb.Server
      , HydraWeb.DB.Pool
      , HydraWeb.DB.Projects
      , HydraWeb.DB.Builds
      , HydraWeb.DB.Queue
      , HydraWeb.Models.Project
      , HydraWeb.Models.Build
      , HydraWeb.Models.Queue
      , HydraWeb.Handlers.Overview
      , HydraWeb.View.Layout
      , HydraWeb.View.Components
      , HydraWeb.View.HTMX

executable hydra-web
    import: common
    ghc-options: -threaded -rtsopts "-with-rtsopts=-N"
    hs-source-dirs: app
    main-is: Main.hs
    build-depends: hydra-web
