cabal-version:      3.0
-- Copyright 2026 Moritz Angermann <moritz@zw3rk.com>, zw3rk pte. ltd.
-- SPDX-License-Identifier: Apache-2.0
name:               hydra-web
version:            0.1.0.0
synopsis:           Haskell frontend for Hydra CI (replaces Go hydra-web)
license:            Apache-2.0
author:             Moritz Angermann
maintainer:         moritz@zw3rk.com
category:           Web
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
    build-depends:
        base >= 4.16 && < 5
      , hydra-lib
      , aeson
      , async
      , bytestring
      , containers
      , crypton
      , http-client
      , http-client-tls
      , http-types
      , lucid
      , memory
      , mtl
      , postgresql-simple
      , resource-pool
      , servant
      , servant-lucid
      , servant-server
      , stm
      , tagged
      , text
      , time
      , vault
      , wai
      , wai-extra
      , wai-app-static
      , warp

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        HydraWeb.Config
      , HydraWeb.Types
      , HydraWeb.API
      , HydraWeb.Server
      , HydraWeb.DB.Pool
      , HydraWeb.DB.Projects
      , HydraWeb.DB.Builds
      , HydraWeb.DB.Evals
      , HydraWeb.DB.Queue
      , HydraWeb.DB.Search
      , HydraWeb.Models.Project
      , HydraWeb.Models.Build
      , HydraWeb.Models.Eval
      , HydraWeb.Models.Queue
      , HydraWeb.Handlers.Overview
      , HydraWeb.Handlers.Project
      , HydraWeb.Handlers.Jobset
      , HydraWeb.Handlers.Eval
      , HydraWeb.Handlers.Build
      , HydraWeb.Handlers.Queue
      , HydraWeb.Handlers.Search
      , HydraWeb.Handlers.API
      , HydraWeb.Handlers.Job
      , HydraWeb.Handlers.Bridges
      , HydraWeb.Handlers.Auth
      , HydraWeb.Handlers.Profile
      , HydraWeb.Handlers.Admin
      , HydraWeb.Handlers.Proxy
      , HydraWeb.Models.Bridge
      , HydraWeb.Models.User
      , HydraWeb.DB.Migrate
      , HydraWeb.DB.Auth
      , HydraWeb.Auth.Encrypt
      , HydraWeb.Auth.Session
      , HydraWeb.Auth.GitHub
      , HydraWeb.Auth.Middleware
      , HydraWeb.View.Pages.Login
      , HydraWeb.DB.Bridges
      , HydraWeb.SSE.Hub
      , HydraWeb.SSE.Listener
      , HydraWeb.View.Layout
      , HydraWeb.View.Render
      , HydraWeb.View.Pages.Bridges
      , HydraWeb.View.Components
      , HydraWeb.View.HTMX
      , HydraWeb.View.Pager
      , HydraWeb.View.BuildDiff
      , HydraWeb.View.Pages.Overview
      , HydraWeb.View.Pages.Project
      , HydraWeb.View.Pages.Jobset
      , HydraWeb.View.Pages.Eval
      , HydraWeb.View.Pages.Build
      , HydraWeb.View.Pages.Queue
      , HydraWeb.View.Pages.Search
      , HydraWeb.View.Pages.Profile
      , HydraWeb.View.Pages.Admin

executable hydra-web
    import: common
    ghc-options: -threaded -rtsopts "-with-rtsopts=-N"
    hs-source-dirs: app
    main-is: Main.hs
    build-depends: hydra-web
