cabal-version:      3.0
-- Copyright 2026 Moritz Angermann <moritz.angermann@iohk.io>, Input Output Group.
-- SPDX-License-Identifier: Apache-2.0
name:               hydra-web
version:            0.2.0.0
synopsis:           Haskell frontend for Hydra CI (replaces Go hydra-web)
license:            Apache-2.0
author:             Moritz Angermann
maintainer:         moritz.angermann@iohk.io
category:           Web
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
    build-depends:
        base >= 4.16 && < 5
      , hydra-lib
      , aeson
      , async
      , bz2
      , bytestring
      , containers
      , directory
      , github-rest
      , crypton
      , http-client
      , http-client-tls
      , http-types
      , insert-ordered-containers
      , lens
      , lucid
      , memory
      , mime-types
      , mtl
      , openapi3
      , postgresql-simple
      , resource-pool
      , servant
      , servant-lucid
      , servant-openapi3
      , servant-server
      , stm
      , tagged
      , text
      , time
      , vault
      , wai
      , wai-extra
      , wai-app-static
      , warp

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        -- Core
        HydraWeb.Config
      , HydraWeb.Types
      , HydraWeb.API
      , HydraWeb.Docs
      , HydraWeb.Server
        -- Database
      , HydraWeb.DB.Pool
      , HydraWeb.DB.Actions
      , HydraWeb.DB.Projects
      , HydraWeb.DB.Builds
      , HydraWeb.DB.Evals
      , HydraWeb.DB.Queue
      , HydraWeb.DB.Search
      , HydraWeb.DB.Util
      , HydraWeb.DB.Migrate
      , HydraWeb.DB.Auth
      , HydraWeb.DB.Bridges
      , HydraWeb.DB.Installations
      , HydraWeb.DB.OrgMap
        -- Visibility
      , HydraWeb.Visibility
      , HydraWeb.DB.RepoVisibility
        -- GitHub
      , HydraWeb.GitHub.RepoCheck
        -- Models
      , HydraWeb.Models.Project
      , HydraWeb.Models.Build
      , HydraWeb.Models.Eval
      , HydraWeb.Models.Queue
      , HydraWeb.Models.Bridge
      , HydraWeb.Models.User
        -- Handlers
      , HydraWeb.Handlers.Overview
      , HydraWeb.Handlers.Project
      , HydraWeb.Handlers.Jobset
      , HydraWeb.Handlers.Eval
      , HydraWeb.Handlers.Build
      , HydraWeb.Handlers.Queue
      , HydraWeb.Handlers.Search
      , HydraWeb.Handlers.API
      , HydraWeb.Handlers.Job
      , HydraWeb.Handlers.Bridges
      , HydraWeb.Handlers.Auth
      , HydraWeb.Handlers.Profile
      , HydraWeb.Handlers.Actions
      , HydraWeb.Handlers.Admin
      , HydraWeb.Handlers.BuildLog
      , HydraWeb.Handlers.Download
      , HydraWeb.Handlers.Proxy
      , HydraWeb.Handlers.Redirect
      , HydraWeb.Handlers.OrgRepo
      , HydraWeb.Handlers.RunningEvals
        -- Auth
      , HydraWeb.Auth.Encrypt
      , HydraWeb.Auth.Session
      , HydraWeb.Auth.GitHub
      , HydraWeb.Auth.Middleware
        -- SSE
      , HydraWeb.SSE.Hub
      , HydraWeb.SSE.Listener
      , HydraWeb.SSE.Stream
        -- Views
      , HydraWeb.View.Layout
      , HydraWeb.View.Components
      , HydraWeb.View.HTMX
      , HydraWeb.View.Pager
      , HydraWeb.View.BuildDiff
        -- Pages
      , HydraWeb.View.Pages.Login
      , HydraWeb.View.Pages.Bridges
      , HydraWeb.View.Pages.Overview
      , HydraWeb.View.Pages.Project
      , HydraWeb.View.Pages.Jobset
      , HydraWeb.View.Pages.Eval
      , HydraWeb.View.Pages.Build
      , HydraWeb.View.Pages.Queue
      , HydraWeb.View.Pages.Search
      , HydraWeb.View.Pages.Profile
      , HydraWeb.View.Pages.Admin
      , HydraWeb.View.Pages.RunningEvals

executable hydra-web
    import: common
    ghc-options: -threaded -rtsopts "-with-rtsopts=-N"
    hs-source-dirs: app
    main-is: Main.hs
    build-depends: hydra-web

test-suite hydra-web-test
    import: common
    type: exitcode-stdio-1.0
    ghc-options: -threaded -rtsopts "-with-rtsopts=-N"
    hs-source-dirs: test
    main-is: Main.hs
    build-depends:
        hydra-web
      , hspec
      , QuickCheck
    build-tool-depends:
        hspec-discover:hspec-discover
    other-modules:
        HydraWeb.View.ComponentsSpec
      , HydraWeb.ConfigSpec
      , HydraWeb.Auth.EncryptSpec
      , HydraWeb.Auth.MiddlewareSpec
      , HydraWeb.DB.OrgMapSpec
      , HydraWeb.DB.SearchSpec
      , HydraWeb.VisibilitySpec
